# win-computer-use

./: .gitignore  LICENSE  NOTES.md  README.md  ROADMAP.md  SKILL.md  TEST_PLAN.md  _skillhub_meta.json  install.bat  install.sh  pyproject.toml  setup.py  start_server.bat  优化方案.md
references/: api.md  cookbook.md  troubleshooting.md
scripts/: __init__.py  cli.py  image_match.py  input_control.py  input_lock.py  markers.py  notify.py  ocr.py  recorder.py  requirements.txt  safety.py  screen.py  server.py  ui_find.py  window_mgmt.py
win_computer_use/: __main__.py  cli.py  clipboard.py  image_match.py  markers.py  ocr.py  platform_util.py  screen.py  server.py  ui_find.py  window_mgmt.py  winocr.py
